catalog/kubernetes/virtual-service-catalog-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 75
    - destination:
        host: catalog
        subset: version-v2
      weight: 25
---
